# i3-support

./: CMakeLists.txt  Readme.md  main.cpp  push-kb.sh
keybinder/: CMakeLists.txt  main.cpp
keybinder/src/: keybind.cc  keybind.hh
pa_control/: .gitignore  CMakeLists.txt  TODO  main.cpp  tests.cpp  tests.h
pa_control/src/: DeviceList.cpp  DeviceList.h  GetSinkInfo.cpp  GetSinkInfo.h  GetSinkListOp.cpp  GetSinkListOp.h  MainLoop.cpp  MainLoop.h  MainLoopDetail.hxx  PaOperation.cpp  PaOperation.h  PaSink.cpp  PaSink.h  SetSinkMuteOp.cpp  SetSinkMuteOp.h  SetVolumeOp.cpp  SetVolumeOp.h  pa_errors.h  utils.cpp  utils.h
src/: keybind.cc  keybind.hh
